[package]
name = "conflux-address-rust"
version = "0.1.0"
authors = ["Pana.W"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfx-addr = "0.1.0"
hex = "0.4.3"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
